--- a/_posts/2022-03-14-现代CMake.md
+++ b/_posts/2022-03-14-现代CMake.md
@@ -66,12 +66,11 @@ CMake中函数做的事情远远比通用编程语言中复杂，参数的格式
 
 CMake项目是一个包括了CMakeLists.txt的文件夹。首先新建一个文件夹，文件夹中新建CMakeLists.txt作为这个项目的描述，然后再在合适的目录结构中写入对应C代码。可执行文件的目录结构比较随意，我的选择是
 
-```text
-hello
+<pre class="highlight" style="line-height: 1"><code>hello
 ├──CMakeLists.txt
 └──source
    └──hello.cpp
-```
+</code></pre>
 
 hello.cpp的内容是
 
