--- a/_posts/2022-06-03-VS Code配置自定义C++调试.md
+++ b/_posts/2022-06-03-VS Code配置自定义C++调试.md
@@ -11,7 +11,7 @@ tags:
 
 ## 自定义调试
 
-[tasks.json](https://code.visualstudio.com/docs/editor/debugging#_launch-configurations)
+[launch.json](https://code.visualstudio.com/docs/editor/debugging#_launch-configurations)
 ```json
 {
     "version": "0.2.0",
