Linux 下 MCP2515 配置

--- a/_posts/2024-05-14-Milk-V-SDK.md
+++ b/_posts/2024-05-14-Milk-V-SDK.md
@@ -2,7 +2,9 @@
 layout: post
 title: Milk-V SDK折腾笔记
 date: 2024-05-14 10:51:00 +0800
-tags: 编程
+tags: 
+- 编程
+- 嵌入式
 render_with_liquid: false
 ---
 
@@ -13,8 +15,8 @@ render_with_liquid: false
 - Milk-V Duo 的部分文档在 <https://github.com/milkv-duo/duo-files/tree/main/duo>。
 - build.sh 里面的`clean_all`可以直接注释掉，或者有问题了再运行。
 - build.sh 一开始有找不到`*.img*`的报错或者找不到`_build_opensbi_env`是正常的。
-- buildroot-2021.05/fs/common.mk 中，把`BR2_TARGET_ROOTFS_TAR_XZ=y`删除，或者把`ROOTFS_$(2)_COMPRESS_CMD = xz -9 -C crc32 -c`
-中的`-9`改成`-0`或更小的值可以大大加快压缩速度。去掉压缩和解压可以大大提高镜像生成速度。
+- buildroot-2021.05/fs/common.mk 中， ~~把`BR2_TARGET_ROOTFS_TAR_XZ=y`删除~~ ，或者把`ROOTFS_$(2)_COMPRESS_CMD = xz -9 -C crc32 -c`
+中的`-9`改成`-1`可以大大加快压缩速度。由于后面`sd_image`目标会硬编码 rootfs.tar.xz，把删除去掉会导致无法更新 overlay。为了避免这个问题，可以在 build.sh 里`rm buildroot-2021.05/output/milkv-duo_musl_riscv64/images/rootfs.tar.xz`。
 - `brmake`错了不要怕，这个脚本的用处只是把`make`的输出放到 br.log。看 br.log 修正即可，大概率是缺库导致的（会缺好几个）。
 - 修改 device/milkv-duo/genimage.cfg 中 image rootfs.ext4 下的大小可以减少镜像大小，加速运行。这步可以大大加速编译。300M 似乎不错。
 - build/Makefile 中，把`${Q}find $(ROOTFS_DIR) -name xxx -type f -printf 'striping %p\n' -exec xxxxx \;`
@@ -24,3 +26,4 @@ render_with_liquid: false
 - freertos/cvitek/scripts/ParseConfiguration.cmake 中有一句`message("${conf_name}=${value}")`会把配置项都打印出来，不关心的话可注释掉。
 - linux 和 u-boot 都会用 mkmakefile 生成 Makefile，似乎会导致每次都重新编译一部分代码，不知道如何解决。
 - 烧录代码用 dd 没有进度提示，可以安装 `pv` 命令后建一个脚本 ```dd if=$1 | pv -s `du -b $1 | cut -f -1` | sudo dd of=$2```，再用 `burn.sh out/xx.image /dev/sdX`可以提示进度。参考 <https://askubuntu.com/questions/215505/how-do-you-monitor-the-progress-of-dd>。
+- ssh 每次都得删除指纹再加很难受，可以在 .ssh/config 里添加 Host milkv，选项中设置 `UserKnownHostsFile NUL`（linux 的 /dev/null 在 Windows 里对应 NUL）和`StrictHostKeyChecking no` ，这样每次只会警告。
