--- a/_posts/2024-05-15-MCP251x设备树阅读.md
+++ b/_posts/2024-05-15-MCP251x设备树阅读.md
@@ -2,7 +2,9 @@
 layout: post
 title: MCP251x设备树阅读
 date: 2024-05-15 14:40:00 +0800
-tags: 编程
+tags: 
+- 编程
+- 嵌入式
 render_with_liquid: false
 ---
 
@@ -21,7 +23,7 @@ render_with_liquid: false
 
 找到了 `compatible` 属性后，可以在 linux 仓库中搜索对应名字的设备树定义或驱动文件，如要阅读`microchip,mcp2515`相关信息时，全局搜索`microchip,mcp2515`，可以找到 linux/drivers/net/can/spi/mcp251x.c 和 linux/Documentation/devicetree/bindings/net/can/microchip,mcp251x.txt 这两个文件，分别对应驱动代码和设备树定义。
 
-设备树中的各个选项由 linux/Documentation/devicetree/bindings 中对应的文件定义，后缀为 .txt/.yaml。其中 .txt 后缀也同样有具体的格式，同样需要编译为设备树 bindings，并不是随意编写。
+设备树中的各个选项的文档在 linux/Documentation/devicetree/bindings 中对应的文件，后缀为 .txt/.yaml。当然，真正的定义大部分在该节点或父节点的驱动中，如下面的`gpio-controller`在 linux/drivers/net/can/spi/mcp251x.c 中定义，而`reg`属性在 linux/drivers/spi/spi.c 中定义。
 
 以 linux/Documentation/devicetree/bindings/net/can/microchip,mcp251x.txt 为例
 
@@ -59,4 +61,19 @@ Example:
 ```
 
 这个文件包括三部分，必要属性、可选属性及示例。
-必要属性包括 `compatible` 、`reg`（片选）、`clocks`和`interrupts`。可选属性包括`vdd-supply`、`xceiver-supply`、`gpio-controller`和`#gpio-cells`。这里的属性和具体设备树中的属性列表并不一一对应，比如时钟属性在代码中可以直接使用`clock-frequency`属性，而中断还需要与`interrupt-parent`搭配使用。另外代码还给出了一个示例用于了解基本的使用方法。
+必要属性包括
+
+- `compatible`：选择驱动
+- `reg`：片选，在 spi.c 中`of_property_read_u32(nc, "reg", &value)`定义
+- `clocks`：时钟，在 mcp251x.c 中`devm_clk_get_optional`定义
+- `interrupts`：中断，在 spi.c 中`of_irq_get`定义
+
+可选属性包括
+
+- `vdd-supply`和`xceiver-supply`：mcp251x.c 中`devm_regulator_get_optional`定义
+- `gpio-controller`：在 mcp251x.c 中`device_property_present(&priv->spi->dev, "gpio-controller")`定义
+- `#gpio-cells`：基本属性，在 linux/drivers/of/property.c 中定义
+
+这里的属性只是大致说明，和具体设备树中的属性列表并不一一对应，比如时钟很可能无需在驱动中启停，因此代码中还定义了`clock-frequency`属性，只用于计算比特率，而中断还需要与`interrupt-parent`搭配使用。另外代码还给出了一个示例用于了解基本的使用方法。
+
+注：现在 MCP2515 通常只使用 SPI 进行通信，最多结合一个中断引脚避免轮询。实际上 MCP2515 的每个发送和输入缓冲区都有对应的引脚，可以用于直接控制收发，或者也可以复用为 GPIO，因此有`gpio-controller`属性。
