--- a/_posts/2024-05-15-MCP251x设备树阅读.md
+++ b/_posts/2024-05-15-MCP251x设备树阅读.md
@@ -13,8 +13,10 @@ render_with_liquid: false
 ## 设备树的基本知识：
 - <https://github.com/mykhani/device-tree-guide>
 - <https://docs.kernel.org/devicetree/usage-model.html>
+- <https://www.devicetree.org/>
+- <https://cloud.tencent.com/developer/article/2008640>
 
-简而言之，设备树是 Linux 中用于分离驱动配置信息和驱动代码的一个树状文件格式，用于避免在代码中硬编码过多的硬件相关数据。因此，设备树实际上是对应硬件驱动的延伸。比如使用 MCP2515 时，需要在对应的 SPI 总线上启用 MCP2515 的驱动，通过配置设备树可以在不改动 .c 代码的情况下将上述变化告知 Linux。
+简而言之，设备树是 Linux 中用于分离驱动配置信息和驱动代码的一个树状文件格式，用于避免在代码中硬编码过多的硬件相关数据。因此，设备树实际上是对应硬件驱动的延伸。比如使用 MCP2515 时，需要在对应的 SPI 总线上启用 MCP2515 的驱动，通过配置设备树可以在不改动 .c 代码的情况下将上述变化告知 Linux。同时，设备树作为一个树形的结构，还可以很方便地表示外设及将外设作为接口的关系，比如 SPI 既是外设，也是与其他接口通信时使用的总线，下面管辖的设备可以是屏幕，也可以是 MCP2515 这样的其他设备。这样，在使用 MCP2515 时，不需要关心 SPI 总线的具体实现，只需要使用通信协议即可。
 设备树文件后缀为 .dts，另外可以用`#include "xxx.dts"`的格式包含 .dtsi 文件，类似 .c 和 .h 的关系。
 
 ## 阅读设备树
