--- a/_posts/2024-05-19-Linux下MCP2515配置.md
+++ b/_posts/2024-05-19-Linux下MCP2515配置.md
@@ -55,28 +55,9 @@ render_with_liquid: false
 };
 ```
 
-这里首先用`status="disabled";`将原来的 SPI 外设关闭，然后添加自己的 MCP2515 外设。其中只有中断部分需要针对 Milk-V Duo 修改，将`interrupt-parent`改为一个包含`gpio-controller`属性的节点，[`interrupts`](https://www.kernel.org/doc/Documentation/devicetree/bindings/interrupt-controller/interrupts.txt)设置为引脚 14 的下降沿。
+这里首先用`status="disabled";`将原来的 SPI 外设关闭，然后添加自己的 MCP2515 外设。其中只有中断部分需要针对 Milk-V Duo 修改，将`interrupt-parent`改为一个包含`interrupt-controller`属性的节点，[`interrupts`](https://www.kernel.org/doc/Documentation/devicetree/bindings/interrupt-controller/interrupts.txt)设置为引脚 14 的下降沿。
 
-```
-// cv180x_base.dtsi
-gpio0: gpio@03020000 {
-    compatible = "snps,dw-apb-gpio";
-    reg = <0x0 0x03020000 0x0 0x1000>;
-    #address-cells = <1>;
-    #size-cells = <0>;
-
-    porta: gpio-controller@0 {
-        compatible = "snps,dw-apb-gpio-port";
-        bank-name = "porta";
-        gpio-controller;
-        #gpio-cells = <2>;
-        snps,nr-gpios = <32>;
-        reg = <0>;
-    };
-};
-```
-
-要注意 Milk-V Duo 给的设备树直到版本 [Duo-V1.1.0](https://github.com/milkv-duo/duo-buildroot-sdk/releases/tag/Duo-V1.1.0) 实际上[并没有实现 GPIO 中断](https://community.milkv.io/t/gpio/1251/4)，需要在`porta`下添加一行`#interrupt-cells = <2>;`。
+不过，Milk-V Duo 给的设备树直到版本 [Duo-V1.1.0](https://github.com/milkv-duo/duo-buildroot-sdk/releases/tag/Duo-V1.1.0) 实际上[并没有实现 GPIO 中断](https://community.milkv.io/t/gpio/1251/4)，需要在`porta`下添加一行`#interrupt-cells = <2>;`。
 ```
 // cv180x_base_riscv.dtsi
 gpio0: gpio@03020000 {
@@ -89,4 +70,21 @@ gpio0: gpio@03020000 {
 };
 ```
 
-编译出镜像即可用在命令行用`ip`指令查看和配置 CAN 相关参数。比较神奇的是由于收发器 TJA1050 需要 5V 电压，这里将 MCP2515 一并接到 5V 电源上，但信号仍是 3.3V，低于 0.7VCC。即便如此，在 11 模式下 SPI 通信正常，因此设置了 spi-cpol 和 spi-cpha。
+类似地，如果是 Luckfox Pico，则设备树中`spidev@0`部分修改为：
+
+```
+// rv1103g-luckfox-pico-mini-b.dts
+spidev@0 {
+    status = "okay";
+    compatible = "microchip,mcp2515";
+    reg = <0>;
+    clock-frequency = <8000000>;
+    interrupt-parent = <&gpio1>;
+    interrupts = <RK_PC4 IRQ_TYPE_EDGE_FALLING>;
+    spi-max-frequency = <2000000>;
+    spi-cpol;
+    spi-cpha;
+};
+```
+
+编译出镜像即可用在命令行用`ip`指令查看和配置 CAN 相关参数。比较神奇的是由于收发器 TJA1050 需要 5V 电压，这里将 MCP2515 一并接到 5V 电源上，但信号仍是 3.3V，低于 0.7VCC。即便如此，在 11 模式下 SPI 通信正常，因此设置了 [spi-cpol 和 spi-cpha](https://blog.csdn.net/win2000_li/article/details/100053217)。
