--- a/_posts/2024-05-19-Linux下MCP2515配置.md
+++ b/_posts/2024-05-19-Linux下MCP2515配置.md
@@ -55,7 +55,7 @@ render_with_liquid: false
 };
 ```
 
-这里首先用`status="disabled";`将原来的 SPI 外设关闭，然后添加自己的 MCP2515 外设。其中只有中断部分需要针对 Milk-V Duo 修改，将`interrupt-parent`改为一个包含`interrupt-controller`属性的节点，[`interrupts`](https://www.kernel.org/doc/Documentation/devicetree/bindings/interrupt-controller/interrupts.txt)设置为引脚 14 的下降沿。
+这里首先用`status="disabled";`将原来的 SPI 外设关闭，然后添加自己的 MCP2515 外设。其中只有中断部分需要针对 Milk-V Duo 修改，将`interrupt-parent`改为一个包含`interrupt-controller`属性的节点，[`interrupts`](https://www.kernel.org/doc/Documentation/devicetree/bindings/interrupt-controller/interrupts.txt)设置为引脚 14 的下降沿。如果不删除原来的spidev，直接在下面配置的话，会只提供一个 SPI 通信接口 /dev/spidev0.0，而不是 SPI 接口下的外设。
 
 不过，Milk-V Duo 给的设备树直到版本 [Duo-V1.1.0](https://github.com/milkv-duo/duo-buildroot-sdk/releases/tag/Duo-V1.1.0) 实际上[并没有实现 GPIO 中断](https://community.milkv.io/t/gpio/1251/4)，需要在`porta`下添加一行`#interrupt-cells = <2>;`。
 ```
