--- a/_posts/2024-05-15-MCP251x设备树阅读.md
+++ b/_posts/2024-05-15-MCP251x设备树阅读.md
@@ -78,4 +78,4 @@ Example:
 
 这里的属性只是大致说明，和具体设备树中的属性列表并不一一对应，比如时钟很可能无需在驱动中启停，因此代码中还定义了`clock-frequency`属性，只用于计算比特率，而中断还需要与`interrupt-parent`搭配使用。另外代码还给出了一个示例用于了解基本的使用方法。
 
-注：现在 MCP2515 通常只使用 SPI 进行通信，最多结合一个中断引脚避免轮询。实际上 MCP2515 的每个发送和输入缓冲区都有对应的引脚，可以用于直接控制收发，或者也可以复用为 GPIO，因此有`gpio-controller`属性。
+注：现在 MCP2515 通常只使用 SPI 进行通信，最多结合一个中断引脚避免轮询。实际上 MCP2515 的每个发送和输入缓冲区都有对应的引脚，可以用于直接控制收发，或者也可以复用为 GPIO，拓展 GPIO 接口数量，因此有`gpio-controller`属性。
