显示屏驱动笔记

--- a/_posts/2024-05-29-Foward-X.md
+++ b/_posts/2024-05-29-Foward-X.md
@@ -23,4 +23,10 @@ Host XXX
   ForwardX11Trusted yes
 ```
 
+- 如果临时使用，上一步可以改为在连接时使用参数`-XY`。
+
 - 连接 SSH，`ssh XXX`，如果不成功可以用`ssh XXX -vvv`查看日志，如果看到`X11 forwarding requested but DISPLAY not set`则前面第二步没有设置。
+
+## xauth错误
+
+如果 xauth 出现错误，可以`strace xauth list`，如果在等待 ~/.Xauthority-c， 可以尝试`rm ~/.Xauthority*`。<https://unix.stackexchange.com/questions/215558/why-am-i-getting-this-message-from-xauth-timeout-in-locking-authority-file-ho>
