--- a/_posts/2024-05-29-Foward-X.md
+++ b/_posts/2024-05-29-Foward-X.md
@@ -30,3 +30,7 @@ Host XXX
 ## xauth错误
 
 如果 xauth 出现错误，可以`strace xauth list`，如果在等待 ~/.Xauthority-c， 可以尝试`rm ~/.Xauthority*`。<https://unix.stackexchange.com/questions/215558/why-am-i-getting-this-message-from-xauth-timeout-in-locking-authority-file-ho>
+
+## 画面模糊
+
+在高分屏可能画面经过缩放，显得比较模糊，这时候可以参考<https://sourceforge.net/p/vcxsrv/discussion/986201/thread/86c22a03/>，在 vcxsrv.exe 的属性->兼容性->更改高dpi设置中将高分辨率缩放替代改为“应用”。这样 X 转发的像素和屏幕像素会变成 1:1 的，比较清晰。
