ROS 2 在 Docker 启用共享内存传输

--- a/_posts/2024-06-01-SSH-proxy.md
+++ b/_posts/2024-06-01-SSH-proxy.md
@@ -31,7 +31,7 @@ ssh -R remoteport:localaddress:localport user@remote
 
 此时，在远程上访问 remoteport 时会转发到本地。
 
-注：此时本地收到的连接可能来自 IPv6 本地链接地址（fe80::/10），而不是回环地址（::1/128）。
+注：如果前面`localhost`略去，此时本地收到的连接可能来自 IPv6 本地链接地址（fe80::/10），而不是回环地址（::1/128），导致一些仅限回环地址的应用无法使用。所以最好还是写上`localhost`为好。
 
 ## SSH 跳板
 
