--- a/_posts/2024-08-31-APT-Debug.md
+++ b/_posts/2024-08-31-APT-Debug.md
@@ -45,3 +45,12 @@ libopencv-dev:
 可以发现 jetson安装了一个 4.5 版本的 OpenCV。
 
 要修复这个库，最好直接`sudo apt purge libopencv-dev`清掉现有内容，记得用`dpkg -S`查看对应的内容是否已经清空，清空后重新`sudo apt-get install libopencv-dev=4.2.0+dfsg-5`再安装其他的库，或者用一些方法锁住该版本：<https://unix.stackexchange.com/questions/162700/apt-pinning-package-versions>
+
+https://unix.stackexchange.com/a/162785
+
+/etc/apt/preferences.d/libopencv-dev
+```
+Package: libopencv-dev
+Pin: version 4.2.0+dfsg-5
+Pin-Priority: 999
+```
