密码学中的椭圆曲线分类

--- a/_posts/2022-06-03-VS Code配置自定义C++调试.md
+++ b/_posts/2022-06-03-VS Code配置自定义C++调试.md
@@ -61,3 +61,9 @@ tags:
 ```
 
 另外在`options`下还可以配置`env`和`shell`。参考[Custom Tasks的文档](https://code.visualstudio.com/docs/editor/tasks#_custom-tasks)。
+
+## 断点为灰色
+
+一般这就是没有成功加载符号的体现，常见两种原因：
+- 没加`-g`所以根本就没有调试信息，可以用`file`检查。
+- 用 clang 的时候没加`-gdwarf-4`导致用了 gdb 读不到 DWARF5 调试信息，提示`Dwarf Error: DW_FORM_strx1 found in non-DWO CU`。[llvm#56522](https://github.com/llvm/llvm-project/issues/56522)
