--- a/_posts/2024-06-01-SSH-proxy.md
+++ b/_posts/2024-06-01-SSH-proxy.md
@@ -46,7 +46,7 @@ ssh -J user@A user@B
 
 ### 通用代理
 
-如果代理不是以`ssh -W`的形式提供，可以用`ProxyCommand`设置一个类似于`nc host port`的代理程序，将输入输出流转发到对应端口。在命令行时使用`-oProxyCommand=`进行设置。
+如果代理服务器不是以`ssh -W`的形式提供，可以用`ProxyCommand`设置一个类似于`nc host port`的代理程序，将输入输出流转发到对应端口。在命令行时使用`-oProxyCommand=`进行设置，例如`-o ProxyCommand='nc --proxy localhost:7890 %h %p'`（`--proxy`在旧版 nc 中为`-x`）。
 
 ## 配置文件
 
@@ -56,6 +56,10 @@ ssh -J user@A user@B
 和命令行参数的区别是第一个端口号和后面的地址间用空格而不是冒号隔开。
 - `-R remoteport:localaddress:localport`对应`RemoteForward remoteport localaddress:localport`。
 - `-J A`对应`ProxyJump A`。
+
+## Git
+
+Git 本身同样使用`ssh`命令处理 SSH 连接。因此，在 Git 中如果需要配置 SSH 相关的代理，除了可以使用 .ssh/config 配置以外，还可以用环境变量`GIT_SSH_COMMAND`来配置，例如`export GIT_SSH_COMMAND="ssh -i $HOME/.ssh/private_key -o IdentitiesOnly=yes -o ProxyCommand='nc -X connect -x localhost:7897 %h %p'" 可以指定连接使用的私钥以及走特定的代理。
 
 ## 性能
 
